--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
+# Se cargan las dependencias para poder usar firebase y el google sign
 dependencies:
   cloud_firestore: ^3.1.4
   firebase_auth: ^3.3.3
@@ -44,10 +46,12 @@ dev_dependencies:
 
 flutter:
 
+  # Se cargan o se llama la carpeta de imagenes para poder ser usadas en el proyecto
   uses-material-design: true
   assets:
     - images/
 
+  # Se cargan o se llaman las fuentes que pueden ser usadas en el proyecto
   fonts:
     - family: MADE Evolve Sans Regular EVO
       fonts:
