--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_sign_in: ^5.2.1
   curved_navigation_bar: ^1.0.1
   image_picker: ^0.8.4+4
+  intl: ^0.17.0
   flutter:
     sdk: flutter
 
