--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 # Se cargan las dependencias para poder usar firebase y el google sign
 dependencies:
   cloud_firestore: ^3.1.4
+  firebase_storage: ^10.2.5
   firebase_auth: ^3.3.3
   firebase_core: ^1.10.5
   google_sign_in: ^5.2.1
