--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   google_sign_in: ^5.2.1
   curved_navigation_bar: ^1.0.1
   image_picker: ^0.8.4+4
+  cached_network_image: ^3.2.0
+  transparent_image: ^2.0.0
   flutter:
     sdk: flutter
 
