--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,3 +83,11 @@ flutter:
     - family: MyNewIcon
       fonts:
         - asset: fonts/MyNewIcon.ttf
+
+    - family: Shopping
+      fonts:
+        - asset: fonts/Shopping.ttf
+
+    - family: Awesome5
+      fonts:
+        - asset: fonts/Awesome5.ttf
